# blockchain_banking

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.docker-compose.yml  docker-compose.yml  pyproject.toml  setup.sh
app/: database.py  main.py  settings.py
app/models/: user.py
app/repositories/: account.py  exceptions.py
app/routers/: api.py
app/schemas/: blockchain.py  user.py
app/utils/: crypto.py  web3_client.py
migrations/: env.py
migrations/versions/: 001_initial_migration.py
tests/: __init__.py  test_api.py
