[tool.poetry]
name = "blockchain-banking-api"
version = "0.1.0"
description = "Blockchain-based banking simulation with FastAPI and PostgreSQL"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
web3 = "^6.15.0"
eth-account = "^0.11.0"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
slowapi = "^0.1.9"
cryptography = "^42.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.25"}
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
python_version = "3.12"
warn_unused_configs = true
